--- a/views/userAuth.ejs
+++ b/views/userAuth.ejs
@@ -16,5 +16,5 @@
 </div>
 
 <!-- Status message area -->
-<div id="status">{{ statusMessage }}</div>
+<div id="status" style="color: red;">{{ statusMessage }}</div>
 </div>
