--- a/views/waiting.ejs
+++ b/views/waiting.ejs
@@ -1,12 +1,21 @@
-<div>
-    <!-- 房主名字 -->
-    <h2 v-if="hostName">Room Host: {{ hostName }}</h2>
-    
-    <!-- 加入的玩家 -->
-    <ul id="waiting-room">
-        <li v-for="player in players" :key="player.id">{{ player.name }}</li>
+<div id="waiting_room">
+    <div class="input-container">
+        <h3> {{ hostName }}</h3>
+    </div>
+    <div class="host-container">
+        <h4> Waiting for everyone to join!</h4>
+    </div>
+
+    <ul class="players-list">
+        <li v-for="(player, index) in players" :key="index">
+            {{ player }}
+        </li>
     </ul>
     
-    <!-- 游戏开始按钮 -->
-    <button @click="startGame" v-if="isHost" class="btn btn-primary">Game Start</button>
+    
+    
+    <div class="button-container">
+        <button @click="gameStart">game start</button>
+    </div>
+    
 </div>
