--- a/views/promptCollect.ejs
+++ b/views/promptCollect.ejs
@@ -1,21 +1,17 @@
-<div id="waiting_room">
+<div id="prompt_collect">
     <div class="input-container">
         <h3> {{ hostName }}</h3>
     </div>
     <div class="host-container">
-        <h4> Waiting for everyone to join!</h4>
+        <h4> think of a funny question or prompt</h4>
     </div>
 
-    <ul class="players-list">
-        <li v-for="(player, index) in players" :key="index">
-            {{ player }}
-        </li>
-    </ul>
+   
     
     
     
     <div class="button-container">
-        <button @click="gameStart">game start</button>
+        <button  @click="prompt_submitted">Done</button>
     </div>
     <div id="status" style="color: red;">{{ statusMessageGameStart }}</div>
     
