--- a/views/waiting.ejs
+++ b/views/waiting.ejs
@@ -14,7 +14,7 @@
     
     
     
-    <div class="button-container">
+    <div v-if="isHost" class="button-container">
         <button @click="gameStart">game start</button>
     </div>
     <div id="status" style="color: red;">{{ statusMessageGameStart }}</div>
