--- a/public/main.css
+++ b/public/main.css
@@ -65,6 +65,14 @@ body {
     align-items: center;
   }
 
+.prompt-container {
+    margin-bottom: 15px;
+    display: flex; /* 启用 Flexbox 布局 */
+    flex-direction: column; /* 子元素垂直排列 */
+    justify-content: center; /* 垂直方向居中 */
+    align-items: stretch; /* 水平方向居中 */
+  }
+
 .button-container {
     margin-top: 20px;
     display: flex;
@@ -73,11 +81,11 @@ body {
   }
 
 .host-container {
-    margin-bottom: 20px; /* 与按钮保持间距 */
+    margin-bottom: 15px; /* 与按钮保持间距 */
     font-size: 14px;
     display: flex;
     flex-direction: column;
-    align-items: flex-start;
+    align-items: center;
 }
 
 .players-list {
