--- a/views/promptCollect.ejs
+++ b/views/promptCollect.ejs
@@ -1,16 +1,20 @@
 <div id="prompt_collect">
     <div class="input-container">
-        <h3> {{ hostName }}</h3>
+        <h3> {{ username }}</h3>
     </div>
     <div class="host-container">
-        <h4> think of a funny question or prompt</h4>
+        <h5> think of a funny question or prompt</h5>
+    </div>
+
+    <div v-if="!prompt_submitted" class="prompt-container">
+        <input type="text" id="prompt">
     </div>
 
    
     
     
     
-    <div class="button-container">
+    <div v-if="!prompt_submitted" class="button-container">
         <button  @click="prompt_submitted">Done</button>
     </div>
     <div id="status" style="color: red;">{{ statusMessageGameStart }}</div>
