--- a/views/promptCollect.ejs
+++ b/views/promptCollect.ejs
@@ -2,21 +2,25 @@
     <div class="input-container">
         <h3> {{ username }}</h3>
     </div>
-    <div class="host-container">
+    <div v-if="!promptSubmitted" class="host-container">
         <h5> think of a funny question or prompt</h5>
     </div>
 
-    <div v-if="!prompt_submitted" class="prompt-container">
-        <input type="text" id="prompt">
+    <div v-if="promptSubmitted" class="host-container">
+        <h5> now you just need to wait for everyone else...</h5>
+    </div>
+
+    <div v-if="!promptSubmitted" class="prompt-container">
+        <input type="text" id="prompt" v-model="prompt">
     </div>
 
    
     
     
     
-    <div v-if="!prompt_submitted" class="button-container">
+    <div v-if="!promptSubmitted" class="button-container">
         <button  @click="prompt_submitted">Done</button>
     </div>
-    <div id="status" style="color: red;">{{ statusMessageGameStart }}</div>
+    <div id="status" style="color: red;">{{ promptMessage }}</div>
     
 </div>
