--- a/public/main.css
+++ b/public/main.css
@@ -80,6 +80,13 @@ body {
     gap: 10px;
   }
 
+.buttonRight-container {
+    margin-top: 20px;
+    display: flex;
+    justify-content: flex-end;
+    gap: 10px;
+  }
+
 .host-container {
     margin-bottom: 15px; /* 与按钮保持间距 */
     font-size: 14px;
