problem-to-pre-accept

--- a/views/answerStage.ejs
+++ b/views/answerStage.ejs
@@ -3,7 +3,7 @@
         <h3> {{ username }}</h3>
     </div>
     <div v-if="!AnswerSubmitted"  class="host-container">
-        <h5>{{prompt_asked}}</h5>
+        <h5>{{firstPrompt}}</h5>
     </div>
 
     <div v-if="AnswerSubmitted" class="host-container">
