answer stage almost done

--- a/views/answerStage.ejs
+++ b/views/answerStage.ejs
@@ -21,10 +21,11 @@
     <div v-if="!AnswerSubmitted" class="button-container">
         <button  @click="answer_submitted">Done</button>
     </div>
+
     
 
     <div v-if="isHost" class="buttonRight-container">
-        <button  @click="startToAnswer">start to vote</button>
+        <button  @click="startToVote">start to vote</button>
     </div>
     
 </div>
