--- a/views/client.ejs
+++ b/views/client.ejs
@@ -19,6 +19,9 @@
         <div v-else-if="connected && currentStage === 'Answer'">
             <%- include('answerStage'); -%>
         </div>
+        <div v-else-if="connected && currentStage === 'Voting'">
+            <p>Voting...</p>
+        </div>
         <div v-else>
             <p>Connecting...</p>
         </div>
