--- a/views/voting.ejs
+++ b/views/voting.ejs
@@ -20,7 +20,7 @@
     
 
     <div v-if="isHost && !AudienceWaiting" class="buttonRight-container">
-        <button  @click="startToVote">start to vote</button>
+        <button  @click="getScores">get scores</button>
     </div>
     
 </div>
