--- a/views/promptCollect.ejs
+++ b/views/promptCollect.ejs
@@ -1,5 +1,8 @@
 <div id="prompt_collect">
     <div class="input-container">
+        <h2> {{ roundTitle }}</h2>
+    </div>
+    <div class="input-container">
         <h3> {{ username }}</h3>
     </div>
     <div v-if="!promptSubmitted" class="host-container">
