--- a/views/voting.ejs
+++ b/views/voting.ejs
@@ -1,5 +1,8 @@
 <div id="Voting stage">
     <div class="input-container">
+        <h2> {{ roundTitle }}</h2>
+    </div>
+    <div class="input-container">
         <h3> {{ username }}</h3>
     </div>
     <div v-if="!VoteSubmitted"  class="host-container">
