--- a/views/client.ejs
+++ b/views/client.ejs
@@ -26,7 +26,7 @@
             <%- include('score'); -%>
         </div>
         <div v-else-if="connected && currentStage === 'FinalScore'">
-            <p>is in finalScore stage...</p>
+            <%- include('FinalScores'); -%>
         </div>
         <div v-else>
             <p>Connecting...</p>
