--- a/views/finalScores.ejs
+++ b/views/finalScores.ejs
@@ -38,7 +38,7 @@
         </div>
     </div>
 
-    <div class="buttonRight-container">
+    <div class="buttonRight-container" v-if="username !==''">
         <button @click="thisGameEnd">Start the New Game</button>
     </div>
 </div>
