all done need check and deploy

--- a/public/main.css
+++ b/public/main.css
@@ -87,6 +87,13 @@ body {
     gap: 10px;
   }
 
+.buttonLeft-container {
+    margin-top: 20px;
+    display: flex;
+    justify-content: flex-start;
+    gap: 10px;
+  }
+
 .host-container {
     margin-bottom: 15px; /* 与按钮保持间距 */
     font-size: 14px;
