--- a/views/promptCollectDisplay.ejs
+++ b/views/promptCollectDisplay.ejs
@@ -17,7 +17,7 @@
         </li>
     </ul>
     <div class="input-container">
-        <h2> Prompt suggestion </h2>
+        <h2>Game Start: Prompt collection stage</h2>
     </div>
     <div class="input-container">
         <h3> {{ roundTitle }}</h3>
