--- a/views/waiting.ejs
+++ b/views/waiting.ejs
@@ -1,6 +1,6 @@
 <div id="waiting_room">
     <div class="input-container">
-        <h3> {{ hostName }}</h3>
+        <h3>admin: {{ hostName }}</h3>
     </div>
     <div class="host-container">
         <h4> Waiting for everyone to join!</h4>
