--- a/views/client.ejs
+++ b/views/client.ejs
@@ -23,23 +23,7 @@
             <%- include('voting'); -%>
         </div>
         <div v-else-if="connected && currentStage === 'ScoresShow'">
-            <p>this round end waiting for check and save the outcome...</p>
-            <div  class="buttonLeft-container">
-                <button  @click="submitPrompt">submit prompt</button>
-            </div>
-        
-            <div v-if="submitPromptHalf" class="host-container">
-                <h5> think of a funny question or prompt</h5>
-            </div>
-            <div v-if="submitPromptHalf" class="prompt-container">
-                <input type="text" id="prompt" v-model="prompt">
-            </div>
-            <div v-if="submitPromptHalf" class="button-container">
-                <button  @click="prompt_submitted">Done</button>
-            </div>
-            <div v-if="isHost" class="buttonRight-container">
-                <button  @click="thisRoundEnd">next </button>
-            </div>
+            <%- include('score'); -%>
         </div>
         <div v-else-if="connected && currentStage === 'FinalScore'">
             <p>game over...</p>
