--- a/public/main.css
+++ b/public/main.css
@@ -365,3 +365,22 @@ body {
 .join-link:hover {
     text-decoration: none; /* 鼠标悬停时去掉下划线 */
 }
+.score-table {
+    width: 100%;
+    border-collapse: collapse; /* 合并表格边框 */
+  }
+  
+  .score-table th, .score-table td {
+    padding: 10px;
+    text-align: left;
+    border-bottom: 1px solid #ddd; /* 添加底部边框 */
+  }
+  
+  .score-table th {
+    background-color: #f0f0f0; /* 表头背景颜色 */
+  }
+  
+  .score-table td {
+    font-size: 16px;
+    color: #555;
+  }
